app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 html,
 button,
 input,
 select,
 textarea {
     color: #222;
 }

 body {
     font-size: 1em;
 }

 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
 }

 ::selection {
     background: #b3d4fc;
     text-shadow: none;
 }

 fieldset {
     border: 0;
     margin: 0;
     padding: 0;
 }

 textarea {
     resize: vertical;
 }

 .chromeframe {
     margin: 0.2em 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
 }

 /* ==========================================================================
    Helper classes
    ========================================================================== */

 .clearfix:before,
 .clearfix:after {
     content: " ";
     display: table;
 }

 .clearfix:after {
     clear: both;
 }

 .clearfix {
     *zoom: 1;
 }

 /* ==========================================================================
    Author's custom styles ---> START YOUR STYLING BELOW
    ========================================================================== */

 html {
   background: url("wallup.jpg"); /*no-repeat center center fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }

 h1 {
   color: white;
   text-align: center;
   font-size: 2em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }

/* ----------------------------------------------------------------- */
/* Login and Signup Forms */
/* ----------------------------------------------------------------- */
 .modal {
     display: none;
     position: absolute;
     width: 40%;
     height: 40%;
     margin: 0 auto;
     border-radius: 10px;
     background-color: gray;
 }

 .user_form {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   text-align: center;
 }

 .form_item {
   margin-top: 10px;
   margin-bottom: 10px;
 }

/* ----------------------------------------------------------------- */

 button {
     display: block;
     border: none;
     outline: none;
     width: 6em;
     height: 2em;
     border-radius: 10px;
     line-height: 2;
     text-align: center;
     font-size: 0.9em;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: skyblue;
     color: black;
     position: relative;
     margin: auto;
     margin-bottom: 10px;
     top: 7em;
     bottom: 0;
     left: 0;
     right: 0;
     -webkit-transition: all 200ms;
     transition: all 200ms;
 }

 button.hover {
     background-color: gray;
     color: #666;
 }

 .getstarted {
     display: block;
     width: 400px;
     height: 18em;
     padding: 2em;
     background-color: #b9c2cc;
     position: absolute;
     margin: auto;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
 }

 .close {
     display: block;
     border: none;
     outline: none;
     width: 1em;
     height: 1em;
     font: 1.5em Arial;
     background-color: #bc2a39;
     color: #e7c0b9;
     border-radius: 0.5em;
     line-height: 0;

     position: absolute;
     top: 0.25em;
     right: 0.25em;
 }

 button.submit {
     display: block;
     border: none;
     outline: none;
     width: 100%;
     padding: 0.5em;
     font: 1.5em "Bebas Neue";
     margin: 1em 0;
     background-color: #bab500;
     color: #fcf6ce;
 }

 .getstarted>input.error {
     outline: 2px solid #bc2a39;
 }

